# api/spec/swagger.yml
@@ -51,6 +51,20 @@ components:
       schema:
         type: "integer"
         default: 10
+    page:
+      name: "page"
+      description: "Page number"
+      in: query
+      required: false
+      schema:
+        type: "integer"
+    page_size:
+      name: "page_size"
+      description: "Number of items per page"
+      in: query
+      required: false
+      schema:
+        type: "integer"
     search_key:
       name: "search_key"
       description: "Key to search for"
@@ -199,11 +213,26 @@ paths:
         - $ref: "#/components/parameters/limit"
         - $ref: "#/components/parameters/search_key"
         - $ref: "#/components/parameters/search_value"
+        - $ref: "#/components/parameters/page"
+        - $ref: "#/components/parameters/page_size"
       responses:
         "200":
           description: "Successfully read properties list"
         "400":
           description: "Invalid request"
+      security:
+        - basic: []
+  /properties/meta:
+    get:
+      operationId: "endpoints.properties.get_meta"
+      tags:
+        - "properties"
+      summary: "Get metadata of properties"
+      parameters:
+        - $ref: "#/components/parameters/page_size"
+      responses:
+        "200":
+          description: "Successfully read properties metadata"
       security:
         - basic: []
   /authenticate:
